/*
 * Copyright (C) 2020 Dremio
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.dremio.plugin.partsyn;

option java_package = "com.dremio.nessie.jgit";
option java_outer_classname = "GitStoreObjects";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

message Table {
  required string path = 1;
  required string metadataLocation = 2;
  optional string metadata = 3;
}

message TableMeta {
  optional string sourceId = 1;
  optional string schema = 2;
  repeated Snapshot snapshots = 3;
}

message Snapshot {
  optional int64 snapshotId = 1;
  optional int64 parentId = 2;
  optional int64 timestampMillis = 3;
  optional string operation = 4;
  optional string manifestLocation = 5;
  map<string, string> summary = 6;
  repeated DataFile dataFiles = 7;
}

message DataFile {
  required bool delete = 1;
  optional string path = 2;
  optional string fileFormat = 3;
  optional int64 recordCount = 4;
  optional int64 fileSizeInBytes = 5;
  optional int32 ordinal = 6;
  repeated int32 sortColumns = 7;
  map<int32, Counts> tableStats = 8;
}

message Counts {
  optional int64 columnSize = 1;
  optional int64 valueCount = 2;
  optional int64 nullValueCount = 3;
}

